dist/LineScript-win64-20260616/tests/cases/compile_fail/len_wrong_type.lsc
main() -> i64 do
  declare x = len(123)
  println(x)
  return 0
end
